# rust-sdl2

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  Makefile.in  README.md  aliases.js  appveyor.yml  build.rs  build.sh  changelog.md  configure  index.html  prebuild.sh  rust-empty.mk  search-index.js  settings.html  source-files.js
.github/workflows/: CI.yml  fmt.yml  vcpkg.yml
assets/: characters_LICENSE
c_vec/: all.html  index.html  sidebar-items.js  struct.CSlice.html  struct.CSliceIter.html  struct.CVec.html  struct.CVecIter.html
demo/: .video.rs.swo  demo.rc  video.rs
examples/: animation.rs  audio-capture-and-replay.rs  audio-queue-squarewave.rs  audio-squarewave.rs  audio-wav.rs  audio-whitenoise.rs  cursor.rs  demo.rs  events.rs  game-controller.rs  game-of-life-unsafe-textures.rs  game-of-life.rs  game_controller.rs  gfx-demo.rs  gfx_demo.rs  haptic.rs  image-demo.rs  image_demo.rs  joystick.rs  keyboard-state.rs  message-box.rs  mixer-demo.rs  mixer_demo.rs  mouse-state.rs  no-renderer.rs  relative-mouse-state.rs  render-geometry.rs  renderer-target.rs  renderer-texture.rs  renderer-yuv.rs  resource-manager.rs  resource_manager.rs  sensors.rs  snake-like-game.rs  ttf-demo.rs  ttf_demo.rs  window-properties.rs
libc/: all.html  constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ACCOUNTING.html  constant.AF_APPLETALK.html  constant.AF_CCITT.html  constant.AF_CHAOS.html  constant.AF_CNT.html  constant.AF_COIP.html  constant.AF_DATAKIT.html  constant.AF_DECnet.html  constant.AF_DLI.html  constant.AF_E164.html  constant.AF_ECMA.html  constant.AF_HYLINK.html  constant.AF_IMPLINK.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_IPX.html  constant.AF_ISDN.html  constant.AF_ISO.html  constant.AF_LAT.html  constant.AF_LINK.html  (+2120 more)
scripts/: travis-install-sdl2.sh
sdl2/: all.html  enum.Error.html  enum.IntegerOrSdlError.html  fn.clear_error.html  fn.get_error.html  fn.get_platform.html  fn.init.html  fn.set_error.html  fn.set_error_from_code.html  index.html  sidebar-items.js  struct.AudioSubsystem.html  struct.EventPump.html  struct.EventSubsystem.html  struct.GameControllerSubsystem.html  struct.HapticSubsystem.html  struct.JoystickSubsystem.html  struct.Sdl.html  struct.TimerSubsystem.html  struct.VideoSubsystem.html
sdl2-sys/: Cargo.toml  build.rs  pregenerated_bindings.rs  sdl_bindings.rs  sdl_gfx_framerate_bindings.rs  sdl_gfx_imagefilter_bindings.rs  sdl_gfx_primitives_bindings.rs  sdl_gfx_rotozoom_bindings.rs  sdl_image_bindings.rs  sdl_mixer_bindings.rs  sdl_ttf_bindings.rs  wrapper.h  wrapper_gfx_framerate.h  wrapper_gfx_imagefilter.h  wrapper_gfx_primitives.h  wrapper_gfx_rotozoom.h  wrapper_image.h  wrapper_mixer.h  wrapper_ttf.h
sdl2-sys/SDL2-2.0.6/include/: SDL_revision.h
sdl2-sys/examples/: no_std.rs
sdl2-sys/patches/: SDL2-2.0.10-CMakeLists.txt.patch  SDL2-2.0.10-SDL_USE_IME.patch  SDL2-2.0.10-sndio-shared-linux.patch  SDL2-2.0.12-SDL_DISABLE_WINDOWS_IME.patch  SDL2-2.0.12-metal-detection-macos-ios.patch  SDL2-2.0.12-sndio-shared-linux.patch  SDL2-2.0.12-vs2019-intrinsics.patch  SDL2-2.0.8-4234-mac-os-dylib-fix.patch  SDL2-2.0.9-CMakeLists.txt.patch
sdl2-sys/src/: audio.rs  clipboard.rs  controller.rs  cpuinfo.rs  event.rs  filesystem.rs  gesture.rs  haptic.rs  hint.rs  image.rs  joystick.rs  keyboard.rs  keycode.rs  lib.rs  log.rs  messagebox.rs  mixer.rs  mouse.rs  pixels.rs  rect.rs  rect_2.rs  render.rs  rwops.rs  scancode.rs  sdl.rs  surface.rs  timer.rs  touch.rs  ttf.rs  version.rs  video.rs
sdl2-sys/src/gfx/: framerate.rs  imagefilter.rs  mod.rs  primitives.rs  rotozoom.rs
sdl2/audio/: enum.AudioFormat.html  (+14 more)
sdl2_image/: Cargo.toml
sdl2_sys/: all.html  constant.AUDIO_F32.html  constant.AUDIO_F32LSB.html  constant.AUDIO_F32MSB.html  constant.AUDIO_F32SYS.html  constant.AUDIO_S16.html  constant.AUDIO_S16LSB.html  constant.AUDIO_S16MSB.html  constant.AUDIO_S16SYS.html  constant.AUDIO_S32.html  constant.AUDIO_S32LSB.html  constant.AUDIO_S32MSB.html  constant.AUDIO_S32SYS.html  constant.AUDIO_S8.html  constant.AUDIO_U16.html  constant.AUDIO_U16LSB.html  constant.AUDIO_U16MSB.html  constant.AUDIO_U16SYS.html  constant.AUDIO_U8.html  constant.Above.html  constant.AllTemporary.html  constant.AllocAll.html  constant.AllocNone.html  constant.AllowExposures.html  constant.AlreadyGrabbed.html  constant.Always.html  constant.AnyButton.html  constant.AnyKey.html  constant.AnyModifier.html  constant.AnyPropertyType.html  constant.ArcChord.html  constant.ArcPieSlice.html  constant.AsyncBoth.html  constant.AsyncKeyboard.html  constant.AsyncPointer.html  constant.AutoRepeatModeDefault.html  constant.AutoRepeatModeOff.html  constant.AutoRepeatModeOn.html  constant.BIG_ENDIAN.html  constant.BYTE_ORDER.html  (+2878 more)
sdl3-sys/: Cargo.toml  build.rs  sdl_bindings.rs  sdl_gfx_framerate_bindings.rs  sdl_gfx_imagefilter_bindings.rs  sdl_gfx_primitives_bindings.rs  sdl_image_bindings.rs  wrapper.h  wrapper_gfx_framerate.h  wrapper_gfx_imagefilter.h  wrapper_gfx_primitives.h  wrapper_gfx_rotozoom.h  wrapper_image.h  wrapper_mixer.h  wrapper_ttf.h
sdl3-sys/examples/: no_std.rs
sdl3-sys/src/gfx/: mod.rs  primitives.rs
src/: controller.rs  event.rs  gesture.rs  joystick.rs  keyboard.rs  mouse.rs  pixels.rs  rect.rs  render.rs  rwops.rs  sdl.rs  sdl2.rc  surface.rs  timer.rs  touch.rs  video.rs
src/sdl2/ttf/: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  context.rs  context.rs.html  ffi.rs  font.rs  font.rs.html  mod.rs  mod.rs.html
src/sdl2/ttf/examples/: demo.rs
src/sdl2/ttf/src/sdl2_ttf/: ffi.rs  font.rs
tests/: audio.rs  events.rs  lib.rs  raw_window_handle.rs  render.rs  video.rs
(+1009 files in other folders)
