[package]

name = "sdl2-sys"
description = "Raw SDL2 bindings for Rust, used internally rust-sdl2"
repository = "https://github.com/rust-sdl2/rust-sdl2"
version = "0.32.6"
authors = ["Tony Aldridge <tony@angry-lawyer.com>"]
keywords = ["SDL", "windowing", "graphics", "ffi"]
categories = ["rendering","external-ffi-bindings","game-engines","multimedia"]
license = "MIT"
links = "SDL2"
build = "build.rs"
edition = "2018"

[lib]
name = "sdl2_sys"
path = "src/lib.rs"

[dependencies]
libc = "^0.2"

[build-dependencies.bindgen]
version = "^0.42"
optional = true

[build-dependencies.pkg-config]
version = "^0.3"
optional = true

[build-dependencies.cmake]
version = "^0.1"
optional = true

[build-dependencies.tar]
version = "^0.4"
optional = true

[build-dependencies.flate2]
version = "^1"
optional = true

[build-dependencies.unidiff]
version = "^0.3"
optional = true

[build-dependencies]
cfg-if = "^0.1"

[features]

default = []
use-pkgconfig = ["pkg-config"]
use-bindgen = ["bindgen"]
static-link = []
use_mac_framework = []
bundled = ["cmake", "tar", "flate2", "unidiff"]
mixer = []
image = []
ttf = []
gfx = []
