[package]

name = "sdl2-sys"
description = "Raw SDL2 bindings for Rust, used internally rust-sdl2"
repository = "https://github.com/rust-sdl2/rust-sdl2"
version = "0.37.0"
authors = ["Tony Aldridge <tony@angry-lawyer.com>", "Cobrand <cobrandw@gmail.com>"]
keywords = ["SDL", "windowing", "graphics", "ffi"]
categories = ["rendering","external-ffi-bindings","game-engines","multimedia"]
license = "MIT AND Zlib"
links = "SDL2"
build = "build.rs"
edition = "2018"

[lib]
name = "sdl2_sys"
path = "src/lib.rs"

[dependencies]
libc = "^0.2"

[build-dependencies.bindgen]
version = "^0.69"
optional = true

[build-dependencies.pkg-config]
version = "^0.3"
optional = true

[build-dependencies.vcpkg]
version = "^0.2.12"
optional = true

[build-dependencies.cmake]
version = "^0.1.47"
optional = true

[build-dependencies.flate2]
version = "^1"
optional = true

[build-dependencies]
version-compare = "0.1"
cfg-if = "^1.0"

[features]

default = []
use-pkgconfig = ["pkg-config"]
use-vcpkg = ["vcpkg"]
use-bindgen = ["bindgen"]
static-link = []
use_mac_framework = []
use_ios_framework = []
bundled = ["cmake"]
mixer = []
image = []
ttf = []
gfx = []
