[package]
name = "sdl2_ttf"
description = "SDL2_ttf bindings for Rust"
repository = "https://github.com/andelf/rust-sdl2_ttf"
version = "0.25.1"
license = "MIT"
readme = "README.md"
authors = ["ShuYu Wang <andelf@gmail.com>"]
keywords = ["SDL", "windowing", "graphics", "font","ttf"]

[lib]
name = "sdl2_ttf"
path = "src/sdl2_ttf/lib.rs"

[dependencies]
bitflags = "0.6"
sdl2 = "0.25"
sdl2-sys = "0.25"

# [dependencies.sdl2]
# git = "https://github.com/AngryLawyer/rust-sdl2/"

# [dependencies.sdl2-sys]
# git = "https://github.com/AngryLawyer/rust-sdl2/"
